@@ -113,6 +113,7 @@ create a blog entry and discuss the O(?) problems as:
  - how many items can be inserted?
  - how fast is model 2 screen index and vice versa
  - overhead by removing/inserting of new items
+ - view to view dependancies for faster drawing, discuss resutling issues
 
 
 
@@ -127,36 +128,18 @@ create a blog entry and discuss the O(?) problems as:
 
 
      
-- selection of connections does not work well?
-
-- cubic_to may be hardware accelerated if i enable opengl in src/CMakeLists.txt as well as for the QGraphicsScene/*View
 
 
-- fixme: when selecting an module, and while hoovering&moving it: delete it using 'del'-key. 
-         the next item will instantly port to 'x,y=0,0', when moving it, using a drag'n'drop operation
-         issue might be: when the item is removed, there is still some pos() thing going on and when the next item is moved it is
-                         moved to the previous item's position, which is QVariant().toPoint(), so 0,0
 
-- bug: if a module makes doubleuse of a outgoing port, one can NOT connect new connections to any input port of that module!
-       however: if the second output usage is removed one can connect the input ports as expected, later the second output
-                can be connected again...?!
-       - this fails silently, create a debug message
-       - this bug is in Model::insertConnection(..) for sure
-       to reproduce:
-       insert perlin p1; selector s1, selector s2; connect s1.out1 to s2.in1 and s1.out1 to s2.in2, then try to connect p1 to 
-              s1.in1 and s2.put1 as well, will not work. will work if no double use of s1.out1 is made!
-       FIX is: first find similar connections as (s1.out1 - s2.in1) AND (s1.out1 - s2.in2), and then only process one of these
-       IMPORTANT: add a qDebug() statement why it does fail
 
-- bug: virtual void DataPort::removeChild(unsigned int) this should not happen
 
-- FIXME: in functions as insertModule: add a check to the parameters (done there, but i need to check other similar functions)
-         this could avoid a lot of segfaults when inserting new concepts into the code
+
 
 
 =================================================================================
   Model related: Adding, selecting, changing, removing of single/multiple items:
 =================================================================================
+- bug: 'virtual void DataPort::removeChild(unsigned int) this should not happen' does show up at some configurations. not sure why?!
 - fix: ~Model and removeRows(..) for rootItem
 - QTreeView did not show anything lately:
   see FilterProxyModel changes.
@@ -166,7 +149,9 @@ create a blog entry and discuss the O(?) problems as:
 - FIXME: - have a look at Model::removeRows and Model::parent, there is some strange things going on, 
            especially with the halding of rootItem and QModelIndex()
          - the rootItem should return a valid QModelIndex() and rootItem->parent() should return QModelIndex()
+
 - if a property changes(a child), the parent (module) should get updated in the GraphicsScene
+   SEE: void GraphicsScene::dataChanged(const QModelIndex&, const QModelIndex&)  FIXME: not implemented yet for PROPERTY 
 - QTreeView is not expanded when loading modules via Document.cpp, is that a problem for later load/save?
 - concept: see assistant, the QTreeView there is basically what i want to clone
   - QTreeView editor for pos should split QPoint up into x and y component as it is done in assistant. is that compilicated?
@@ -181,6 +166,16 @@ create a blog entry and discuss the O(?) problems as:
 - implement QSettings for QTreeView column width
     MainWidget::changeActiveDocument() -> replace by QSettings... treeView->setColumnWidth(0, 230);
 - QTreeView: add tooltips
+- bug: if a module makes doubleuse of a outgoing port, one can NOT connect new connections to any input port of that module!
+       however: if the second output usage is removed one can connect the input ports as expected, later the second output
+                can be connected again...?!
+       - this fails silently, create a debug message
+       - this bug is in Model::insertConnection(..) for sure
+       to reproduce:
+       insert perlin p1; selector s1, selector s2; connect s1.out1 to s2.in1 and s1.out1 to s2.in2, then try to connect p1 to 
+              s1.in1 and s2.put1 as well, will not work. will work if no double use of s1.out1 is made!
+       FIX is: first find similar connections as (s1.out1 - s2.in1) AND (s1.out1 - s2.in2), and then only process one of these
+       IMPORTANT: add a qDebug() statement why it does fail
 
 
 
@@ -194,10 +189,15 @@ create a blog entry and discuss the O(?) problems as:
 ========================================================================
   Fixing QGraphicsItem(s) and the behaviour of the QGraphicsView:
 ========================================================================
+- selection of connections does not work well?
+- fixme: when selecting an module, and while hoovering&moving it: delete it using 'del'-key. 
+         the next item will instantly port to 'x,y=0,0', when moving it, using a drag'n'drop operation
+         issue might be: when the item is removed, there is still some pos() thing going on and when the next item is moved it is
+                         moved to the previous item's position, which is QVariant().toPoint(), so 0,0
+- cubic_to may be hardware accelerated if i enable opengl in src/CMakeLists.txt as well as for the QGraphicsScene/*View
 - Connection drawing could be nicer
  - drawing of the connection path: if x1 and x2 from the different coordinates are the same and y1 and y2 differ much then the
    path looks somehow broken. it should have a nice arc or bow like shape
-- CTRL+A should select all QGraphicsItems
 - creating a connection currently is done clicking a port with a drag'n'drop operation:
   this should be changed: clicking once will change the mousecursor to a port draw operation cursor, next the line will always follow from
   the source port to the mouse cursor (basically what it does currently) until the next click which then checks if a valid port was clicked.
